refactor: remove Lombok dependencies